Squashing bugs

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -160,14 +160,14 @@
 .panel-body{
   background: url(:event_image);
 }
-#panel-bottom{
+.panel-bottom{
   margin: none;
   text-align: center;
 }
 .footer-with-icon{
   display: inline-block;
 }
-#event-image-thumbnail{
+.event-image-thumbnail{
   width: 40px;
   height: 40px;
   border-radius: 4px;
